Add account username or Comrad nick name to nav bar
Make the username or nick name link to account page.
If a logged in user doesn't have a Comrade, that will force the creation of one.

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -150,6 +150,11 @@
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sitenavbar" aria-controls="sitenavbar" aria-expanded="false" aria-label="Toggle navigation" >
                     <span class="navbar-toggler-icon"></span>
                 </button>
+		{% if request.user.comrade %}
+			<span class="navbar-text"><a href="{% url 'account' %}">Hi, {{ request.user.comrade.nick_name }}!</a></span>
+		{% elif request.user %}
+			<span class="navbar-text"><a href="{% url 'account' %}">Hi, {{ request.user.username }}!</a></span>
+		{% endif %}
                 <div id="sitenavbar" class="navbar-collapse collapse">
                     <ul class="navbar-nav ml-auto">
                         {% for headerp in header_pages %}
