--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -154,6 +154,8 @@
 			<span class="navbar-text"><a href="{% url 'account' %}">Hi, {{ request.user.comrade.nick_name }}!</a></span>
 		{% elif request.user %}
 			<span class="navbar-text"><a href="{% url 'account' %}">Hi, {{ request.user.username }}!</a></span>
+		{% else %}
+			<span class="navbar-text"><a href="{% url 'login' %}">Log In</a></span>
 		{% endif %}
                 <div id="sitenavbar" class="navbar-collapse collapse">
                     <ul class="navbar-nav ml-auto">
