--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -8,11 +8,11 @@ Dashboard
 {% block content %}
 <h1>Dashboard</h1>
 
-{% for group in groups %}
-<h2>{{ group.0|title }}</h2>
-	{% for obj in group.1 %}
+{% for status, group in groups %}
+<h2>{{ status|title }}</h2>
+	{% for label, obj in group %}
 	<div class="card mb-3">
-	<div class="card-header">{{ obj.get_approval_status_display }}</div>
+	<div class="card-header">{{ label|title }}</div>
 	<div class="card-body">
 		<p class="card-text"><a href="{{ obj.get_preview_url }}">{{ obj }}</a></p>
 		<div class="mx-auto mr-sm-0" role="group" aria-label="Actions">
