--- a/home/templates/home/snippet/community_landing_snippet.html
+++ b/home/templates/home/snippet/community_landing_snippet.html
@@ -33,7 +33,7 @@ A description of the application process can be found on the <a href="/apply/">a
 <p><a href="{{ community.website }}">{{ community.name }}</a>
 is a Free and Open Source Software (FOSS) community
 that is offering internship projects through the Outreachy program.
-Additional Outreachy internship opportunities with other FOSS communities can be found on the <a href="/{{ current_round.url }}">the current round page</a>.
+Additional Outreachy internship opportunities with other FOSS communities can be found on the <a href="{{ current_round.url }}">the current round page</a>.
 </p>
 
 <h2>What is {{ community.name }}?</h2>
