View and template changes to separate team from internship project proposal

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -8,15 +8,19 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <h1>Call for Outreachy Community Participation</h1>
 <p>Outreachy provides three-month internships for people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>. Internships run twice a year.</p>
 
-<h2>Who can participate?</h2>
-<p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers.</p>
-<p>We define a community as a Free and Open Source Software (FOSS) community that uses licenses that are released under either an <a href="https://opensource.org/licenses/alphabetical">OSI-approved open source license</a> that is also identified by the FSF as a <a href="https://www.gnu.org/licenses/license-list.html">free software license</a>, OR a <a href="https://creativecommons.org/share-your-work/public-domain/freeworks/">Creative Commons license approved for free cultural works</a>. Internship projects need to meet the same licensing requirements, and they must forward the interests of free and open source software, not proprietary software. FOSS communities also need to meet <a href="/mentor/community-faq/">additional requirements</a>.</p>
-
-<p>A FOSS <strong>community</strong> can be an umbrella organization for many smaller <strong>projects</strong>. For example, GNOME might participate as a community, with different GNOME applications participating as projects. Smaller organizations might be considered both a community and a project. For example, Git has participated as a community, with one intern project to add new features to Git.</p>
+<h2>Terms used</h2>
+{% include "home/snippet/foss-terms.html" %}
 
 <h2>Outreachy roles</h2>
 <p>There are several different Outreachy roles:<p>
 {% include "home/snippet/roles.html" %}
+
+<h2>Who can participate?</h2>
+<p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers.</p>
+
+<p>Communities participating in Outreachy must further the mission of Free and Open Source Software (FOSS), not proprietary software. FOSS communities also need to meet <a href="/mentor/community-faq/">additional requirements</a><p>
+
+{% include "home/snippet/license-requirements.html" %}
 
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
 {% include "home/snippet/mentor-timeline.html" %}
