--- a/home/templates/home/mentorapproval_form.html
+++ b/home/templates/home/mentorapproval_form.html
@@ -6,6 +6,13 @@
 
 <p>Mentors provide need to provide some information to be reviewed by the FOSS community coordinators. Additionally, your project communication channel username will be shown to applicants on the project page.</p>
 
+<p><strong>Please read these questions carefully.</strong></p>
+
+<h2>Terms Used</h2>
+{% include "home/snippet/foss-terms.html" %}
+
+<h2>Mentor Information</h2>
+
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
