--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -77,6 +77,7 @@
             @import "node_modules/bootstrap/scss/nav";
             @import "node_modules/bootstrap/scss/navbar";
             @import "node_modules/bootstrap/scss/card";
+            @import "node_modules/bootstrap/scss/badge";
             @import "node_modules/bootstrap/scss/utilities";
             @import "node_modules/bootstrap/scss/print";
 
@@ -159,6 +160,11 @@
 		{% endif %}
                 <div id="sitenavbar" class="navbar-collapse collapse">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'dashboard' %}">
+				    Notifications <span class="badge badge-light">{{ pending_approvals }}</span>
+			    </a>
+                        </li>
                         {% for headerp in header_pages %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% pageurl headerp %}">{{ headerp.title }}</a>
